# HierarchicalKV-ascend

./: .gitmodules  CMakeLists.txt  README.md  dependencies.yaml  main.cpp  run.sh
.gitcode/: PULL_REQUEST_TEMPLATE.zh-CN.md
benchmark/: benchmark_find_miss.cpp  benchmark_util.h  hkv_hashtable_benchmark.cpp
cmake/: FindGTest.cmake
doc/: 原生API支持度.md
hkv_hashtable/accum_or_assign_kernel/: accum_or_assign_kernel.h  accum_or_assign_kernel_hybrid.h
hkv_hashtable/assign_kernel/: assign_kernel.h
hkv_hashtable/assign_scores_kernel/: assign_scores_kernel.cpp  assign_scores_kernel.h  assign_scores_kernel_with_filter.cpp  assign_scores_kernel_with_filter.h
hkv_hashtable/assign_scores_kernel/v35/: assign_scores_kernel.h  assign_scores_kernel_with_filter.h
hkv_hashtable/assign_values_kernel/: assign_values_kernel.h
hkv_hashtable/clear_kernel/: clear_kernel.h
hkv_hashtable/contains_kernel/: contains_kernel.h
hkv_hashtable/dump_kernel/: dump_kernel.h  dump_kernel_if.h  dump_kernel_if_v2.h
hkv_hashtable/find_and_update_kernel/: find_and_update_kernel.h  find_and_update_kernel_with_filter.h
hkv_hashtable/find_kernel/: find_miss_with_digest_kernel.h  find_miss_with_digest_kernel_hybrid.h  find_with_digest_kernel.h
hkv_hashtable/find_or_insert_ptr_kernel/: find_or_insert_ptr_kernel.cpp  find_or_insert_ptr_kernel.h  find_or_insert_ptr_kernel_v2.cpp  find_or_insert_ptr_kernel_v2.h
hkv_hashtable/find_or_insert_ptr_kernel/v35/: find_or_insert_ptr_kernel.h  find_or_insert_ptr_kernel_v2.h
hkv_hashtable/find_ptr_kernel/: find_ptr_kernel.cpp  find_ptr_kernel.h  find_ptr_with_digest_kernel.cpp  find_ptr_with_digest_kernel.h
hkv_hashtable/find_ptr_kernel/v35/: find_ptr_kernel.h  find_ptr_with_digest_kernel.h
hkv_hashtable/init_table_kernel/: init_table_kernel.h
hkv_hashtable/insert_and_evict_kernel/: insert_and_evict_kernel.cpp  insert_and_evict_kernel.h
hkv_hashtable/insert_and_evict_kernel/v35/: insert_and_evict_kernel.h
hkv_hashtable/insert_or_assign_kernel/: insert_or_assign_kernel.cpp  insert_or_assign_kernel.h  insert_or_assign_kernel_with_thread_1024.cpp
hkv_hashtable/insert_or_assign_kernel/v35/: insert_or_assign_kernel.h
hkv_hashtable/lock_keys_kernel/: lock_keys_kernel.h
hkv_hashtable/rehash_kernel/: rehash_kernel.h
hkv_hashtable/remove_kernel/: remove_kernel.h
hkv_hashtable/size_if_kernel/: size_if_kernel.h
hkv_hashtable/traverse_kernel/: traverse_kernel.h
hkv_hashtable/unlock_keys_kernel/: unlock_keys_kernel.h
hkv_hashtable/utils_kernel/: group_lock_kernel.h  utils_kernel.h
include/: allocator.h  bucket_memory_pool_manager.h  debug.h  find_utils.h  group_lock.h  hashtable_options.h  hkv_hashtable.h  memory_pool.h  score_functor.h  simt_vf_dispatcher.h  table.h  tiling_helper.h  types.h  utils.h
include/kernels/accum_or_assign_kernel/: accum_or_assign_kernel.h  accum_or_assign_kernel_hybrid.h
include/kernels/assign_kernel/: assign_kernel.h
include/kernels/assign_scores_kernel/: assign_scores_kernel.h  assign_scores_kernel_with_filter.h
include/kernels/assign_values_kernel/: assign_values_kernel.h
include/kernels/clear_kernel/: clear_kernel.h
include/kernels/contains_kernel/: contains_kernel.h
include/kernels/dump_kernel/: dump_kernel.h  dump_kernel_if.h  dump_kernel_if_v2.h
include/kernels/find_and_update_kernel/: find_and_update_kernel.h  find_and_update_kernel_with_filter.h
include/kernels/find_kernel/: find_miss_with_digest_kernel.h  find_miss_with_digest_kernel_hybrid.h  find_with_digest_kernel.h
include/kernels/find_or_insert_kernel/: find_or_insert_kernel.h
include/kernels/find_or_insert_ptr_kernel/: find_or_insert_ptr_kernel.h  find_or_insert_ptr_kernel_v2.h
include/kernels/find_ptr_kernel/: find_ptr_kernel.h  find_ptr_with_digest_kernel.h
include/kernels/init_table_kernel/: init_table_kernel.h
include/kernels/insert_and_evict_kernel/: insert_and_evict_kernel.h
include/kernels/insert_or_assign_kernel/: insert_or_assign_kernel.h
include/kernels/lock_keys_kernel/: lock_keys_kernel.h
include/kernels/rehash_kernel/: rehash_kernel.h
include/kernels/remove_kernel/: remove_kernel.h
include/kernels/size_if_kernel/: size_if_kernel.h
include/kernels/traverse_kernel/: traverse_kernel.h
include/kernels/unlock_keys_kernel/: unlock_keys_kernel.h
include/kernels/utils_kernel/: utils_kernel.h
script/: check_hkv_deps.py
tests/: CMakeLists.txt  test_accum_or_assign.cpp  test_aclnn_helper.cpp  test_assign.cpp  test_assign_scores.cpp  test_assign_values.cpp  test_basic_properties.cpp  test_bucket_memory_pool.cpp  test_contains.cpp  test_device_data.h  test_erase.cpp  test_export_batch.cpp  test_export_batch_if_v2.cpp  test_export_batch_large.cpp  test_find.cpp  test_find_and_update.cpp  test_find_miss.cpp  test_find_or_insert.cpp  test_find_or_insert_evict_strategies.cpp  test_for_each.cpp  test_group_lock.cpp  test_insert_and_evict.cpp  test_insert_or_assign.cpp  test_lock_unlock_keys.cpp  test_memory_pool.cpp  test_reserve.cpp  test_size_if.cpp  test_template_func.h  test_unlock_keys.cpp  test_util.h
tests/common/: test_device_data.h  test_find_base.h  test_template_func.h  test_util.h
tests/community/: CMakeLists.txt  accum_or_assign_test.cpp  assign_score_test.cpp  assign_values_test.cpp  dynamic_max_capacity_test.cpp  export_batch_if_test.cpp  find_or_insert_ptr_lock_test.cpp  find_or_insert_ptr_test.cpp  find_or_insert_test.cpp  find_with_missed_keys_test.cpp  group_lock_test.cpp  insert_and_evict_test.cpp  lock_unlock_test.cpp  memory_pool_test.cpp  merlin_hashtable_test.cpp  reserved_keys_test.cpp  save_and_load_test.cpp  test_util.h
tests/test_score_functor/: test_score_functor.cpp  test_score_functor_kernel.h
